--- a/templates/base.html
+++ b/templates/base.html
@@ -18,7 +18,8 @@
     <!-- Layout styles -->
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
     <link rel="stylesheet" href="{% static 'css/custom_style.css' %}">
-
+    <link rel="stylesheet" href="{% static 'css/components.css' %}">
+    
     <!-- End layout styles -->
     <link rel="shortcut icon" href="{% static 'images/favicon.ico' %}" />
   </head>
