--- a/contact/templates/contact/edit_view.html
+++ b/contact/templates/contact/edit_view.html
@@ -31,7 +31,7 @@
   <div class="col-12 grid-margin stretch-card">
     <div class="card">
       <div class="card-body">
-        <h4 class="card-title">Edit CONTACT</h4>
+        <h4 class="card-title">Edit Contact</h4>
         <p class="card-description">Update contact details </p>
         <form class="forms-sample" method="POST" enctype="multipart/form-data">
           {% csrf_token %}
