--- a/customer/templates/customer/list_view.html
+++ b/customer/templates/customer/list_view.html
@@ -116,7 +116,7 @@
                     <i class="mdi mdi-dots-vertical"></i>
                   </button>
                   <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                    <a class="dropdown-item" href="#">
+                    <a class="dropdown-item" href="{% url 'customer:edit-info' customer.uuid %}">
                       <i class="mdi mdi-pencil-box-outline me-2"></i>
                       Edit Customer Info
                     </a>
