--- a/templates/base.html
+++ b/templates/base.html
@@ -25,7 +25,9 @@
   </head>
   <body>
     <div class="container-scroller">
-    
+
+        {% include '_partials/_snackbar.html' %}
+
         {% block navbar %}
         {% endblock %}
 
