--- a/contact/templates/contact/contact_form.html
+++ b/contact/templates/contact/contact_form.html
@@ -1,5 +1,6 @@
+{% load static %}
 <div class="row">
-    <div class="col-8">
+    <div class="col col-md-8">
         <div class="form-group">
             <label for="{{ form.name.id_for_label }}">Name *</label>
             {{ contact_form.name }}
@@ -8,19 +9,42 @@
             <label for="{{ form.designation.id_for_label }}">Designation</label>
             {{ contact_form.designation }}
         </div>
+        <div class="form-group">
+            <label for="{{ contact_form.organization.id_for_label }}">Organization *</label>
+            {{ contact_form.organization }}
+        </div>
     </div>
     <div class="col-4">
         <div class="form-group float-end">
-            <label for="{{ form.profile_picture.id_for_label }}">Upload Picture</label>
-            {{ contact_form.profile_picture }}
+            <div class="form-group text-center">
+                <label for="{{ contact_form.profile_picture.id_for_label }}" class="text-uppercase fw-bold">Upload
+                    Picture *</label>
+                {% if contact_form.instance.profile_picture %}
+                <div>
+                    <img src="{{ contact_form.instance.profile_picture.url }}" alt="Profile Picture" width="100%" />
+                </div>
+                {% else %}
+                <div>
+                    <img src="{% static 'images/avatar.jpg' %}" alt="Default Profile Picture" width="75%">
+                </div>
+                {% endif %}
+
+                <div class="my-3">
+                    {% if contact_form.profile_picture.value %}
+                    <label for="{{ contact_form.profile_picture.auto_id }}-clear_id">Remove photo</label>
+                    <input type="checkbox" name="{{ contact_form.profile_picture.html_name }}-clear"
+                        id="{{ contact_form.profile_picture.auto_id }}-clear_id" />
+                    {% endif %}
+                    <input type="file" class="form-control file-upload-info"
+                        name="{{ contact_form.profile_picture.html_name }}"
+                        id="{{ contact_form.profile_picture.id_for_label }}">
+                </div>
+            </div>
+
         </div>
     </div>
 </div>
 
-<div class="form-group">
-    <label for="{{ contact_form.organization.id_for_label }}">Organization *</label>
-    {{ contact_form.organization }}
-</div>
 <div class="row">
     <div class="col">
         <div class="form-group">
