--- a/prospect/templates/prospect/list_view.html
+++ b/prospect/templates/prospect/list_view.html
@@ -118,6 +118,10 @@
                       Edit info
                     </a>
                     <a class="dropdown-item" href="#">
+                      <i class="mdi mdi mdi-contacts me-2"></i>
+                      Update contacts persons
+                    </a>
+                    <a class="dropdown-item" href="#">
                       <i class="mdi mdi-information-outline me-2"></i>
                       Update remarks
                     </a>
