--- a/prospect/templates/prospect/list_view.html
+++ b/prospect/templates/prospect/list_view.html
@@ -68,7 +68,7 @@
                 <td>
                     {{ prospect.name }}
                 </td>
-                <td>{{ prospect.street}}, <br> {{ prospect.city }}, {{ prospect.state }} {{ prospect.country }}</td>
+                <td>{{ prospect.street}}, <br> {{ prospect.city }}, {{ prospect.misc.state }} {{ prospect.misc.country }}</td>
                 <td>
                   {% for contact in contact_persons %}
                   <div class="contact-group">
