--- a/templates/base.html
+++ b/templates/base.html
@@ -387,5 +387,6 @@
     <script src="{% static 'js/todolist.js' %}"></script>
     <script src="{% static 'js/app.js' %}"></script>
     <!-- End custom js for this page -->
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
   </body>
 </html>
