--- a/assets/css/custom_style.css
+++ b/assets/css/custom_style.css
@@ -198,3 +198,21 @@ table .address-col {
 .w-100 {
     width: 100%;
 }
+.modal-body{
+    color: #000000;
+}
+
+.modal-body input[type="time"],
+.modal-body input[type="date"],
+.modal-body select[name="Status"]
+ {
+   width: 100%; 
+   margin-top: 0.5em;
+   margin-bottom: 0.5em;
+   font-size: 1.1em;
+}
+.modal-body input[type="radio"] {
+    margin: 0.5em; 
+}
+
+
