--- a/prospect/templates/prospect/list_view.html
+++ b/prospect/templates/prospect/list_view.html
@@ -127,11 +127,11 @@
                       Re-assign CRM
                     </a>
 
-                    <a class="dropdown-item border-top" href="#">
+                    <a class="dropdown-item border-top" data-bs-toggle="modal"  data-bs-target="#changeStatus">
                       <i class="mdi mdi-refresh me-2"></i>
                       Change status
                     </a>
-                  </div>
+                  </div>                
                 </div>
               </td>
 
@@ -144,4 +144,94 @@
     </div>
   </div>
 </div>
+
+<!-- Modal for changing status -->
+<div class="modal fade" id="changeStatus" tabindex="-1" aria-labelledby="changeStatusLabel" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered" style="max-width: 20%;">
+      <div class="modal-content">
+          <div class="modal-header">
+              <h5 class="modal-title" id="changeStatusLabel">Change Status</h5>
+              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          </div>
+          <div class="modal-body">
+              Status<br>
+              <select name="Status" id="statusSelect">
+                <option value="Appointment">Appointment Requested</option>
+                <option value="Meeting_Scheduled">Meeting Scheduled</option>
+                <option value="Awaiting_Response">Awaiting Response</option>
+                <option value="Responded">Responded</option>
+              </select>
+
+                   
+            
+                  <div id="meetingDate">
+                  Date
+                  <br>
+                  <input type="date" >
+                </div>
+                <div id="meetingTime" style="display: none;">
+                  Time<br>
+                  <input type="time" >
+                  <br>
+                  </div>
+
+                <div id="ResponseCustomer" style="display: none;">
+                  Response<br>
+                  <input type="radio" id="contactChoice1" name="response" />
+                  <label for="contactChoice1">Yes(Prospect to Customer)</label>
+                  <br>
+                  <input type="radio" id="contactChoice2" name="response" />
+                  <label for="contactChoice2">No</label>
+              </div>
+
+                <div id="ResponseDate" style="display: none;">
+                  Response on Date
+                  <br>
+                  <input type="date" >
+                </div>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-info">Update</button>  
+            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+              
+          </div>
+      </div>
+  </div>
+</div>
+<script>
+  document.getElementById("statusSelect").addEventListener("change", function() {
+      var meetingTime = document.getElementById("meetingTime");
+      var meetingDate = document.getElementById("meetingDate");
+      var response = document.getElementById("ResponseDate"); ResponseCustomer
+      var ResponseCustomer = document.getElementById("ResponseCustomer");
+      var selectedValue = this.value;
+
+      if (selectedValue === "Meeting_Scheduled") {
+        meetingTime.style.display = "block";
+        meetingDate.style.display = "block";
+        ResponseCustomer.style.display = "none";
+        response.style.display= "none";
+      } else if (selectedValue === "Awaiting_Response") {
+        meetingTime.style.display = "none";
+        meetingDate.style.display = "none";
+        response.style.display= "none";
+        ResponseCustomer.style.display = "none";
+        
+      } else if (selectedValue === "Responded") {
+        meetingTime.style.display = "none";
+        meetingDate.style.display = "none";
+          response.style.display = "block";
+        ResponseCustomer.style.display = "block";
+
+      } else if (selectedValue === "Appointment") {
+        meetingTime.style.display = "none";
+        meetingDate.style.display = "block";
+          response.style.display = "none";
+        ResponseCustomer.style.display = "none";
+
+      } 
+      
+  });
+</script>
+
 {% endblock %}
