--- a/templates/_partials/_navbar.html
+++ b/templates/_partials/_navbar.html
@@ -35,8 +35,16 @@
                     <a class="dropdown-item" href="#">
                         <i class="mdi mdi-cached me-2 text-success"></i> Activity Log </a>
                     <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="#">
-                        <i class="mdi mdi-logout me-2 text-primary"></i> Signout </a>
+                    <form method="post" action="{% url 'account_logout' %}">
+                        {% csrf_token %}
+                        {% if redirect_field_value %}
+                        <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
+                        {% endif %}
+                        <button type="submit" class="dropdown-item">
+                            <i class="mdi mdi-logout me-2 text-primary"></i> Signout </button>
+                    </form>
+
+                    
                 </div>
             </li>
             <li class="nav-item d-none d-lg-block full-screen-link">
