--- a/prospect/templates/prospect/list_view.html
+++ b/prospect/templates/prospect/list_view.html
@@ -118,7 +118,7 @@
                       <i class="mdi mdi-pencil-box-outline me-2"></i>
                       Edit info
                     </a>
-                    <a class="dropdown-item" href="#">
+                    <a class="dropdown-item" data-bs-toggle="modal"  data-bs-target="#UpdateRemarks">
                       <i class="mdi mdi-information-outline me-2"></i>
                       Update remarks
                     </a>
@@ -147,48 +147,52 @@
 
 <!-- Modal for changing status -->
 <div class="modal fade" id="changeStatus" tabindex="-1" aria-labelledby="changeStatusLabel" aria-hidden="true">
-  <div class="modal-dialog modal-dialog-centered" style="max-width: 20%;">
+  <div class="modal-dialog modal-dialog-centered">
       <div class="modal-content">
           <div class="modal-header">
-              <h5 class="modal-title" id="changeStatusLabel">Change Status</h5>
+              <h3 class="modal-title" id="changeStatusLabel">Change Status</h3>
               <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
           </div>
           <div class="modal-body">
               Status<br>
-              <select name="Status" id="statusSelect">
+              <select name="Status"  id="statusSelect" class="form-select">
                 <option value="Appointment">Appointment Requested</option>
                 <option value="Meeting_Scheduled">Meeting Scheduled</option>
                 <option value="Awaiting_Response">Awaiting Response</option>
                 <option value="Responded">Responded</option>
               </select>
 
-                   
-            
                   <div id="meetingDate">
                   Date
                   <br>
-                  <input type="date" >
-                </div>
+                  <input type="date"class="form-control form-control-sm">
+                 </div>
+
                 <div id="meetingTime" style="display: none;">
                   Time<br>
-                  <input type="time" >
+                  <input type="time" class="form-control form-control-sm">
                   <br>
                   </div>
 
-                <div id="ResponseCustomer" style="display: none;">
-                  Response<br>
-                  <input type="radio" id="contactChoice1" name="response" />
-                  <label for="contactChoice1">Yes(Prospect to Customer)</label>
-                  <br>
-                  <input type="radio" id="contactChoice2" name="response" />
-                  <label for="contactChoice2">No</label>
-              </div>
+                  <div id="ResponseCustomer" style="display: none;">
+                    Response<br>
+                    <div style="margin-bottom: 1em; margin-top: 0.5em;">
+                      <input type="radio" id="contactChoice1" name="response" class="form-check-input" />
+                      <label for="contactChoice1" class="form-check-label">Yes(Prospect to Customer)</label>
+                  </div>
+                  <div style="margin-bottom: 1em;">
+                      <input type="radio" id="contactChoice2" name="response"  class="form-check-input" />
+                      <label for="contactChoice2" class="form-check-label">No</label>
+                  </div>
+                </div>
+                
 
                 <div id="ResponseDate" style="display: none;">
                   Response on Date
                   <br>
-                  <input type="date" >
+                  <input type="date" class="form-control form-control-sm">
                 </div>
+
           </div>
           <div class="modal-footer">
             <button type="button" class="btn btn-info">Update</button>  
@@ -198,6 +202,31 @@
       </div>
   </div>
 </div>
+
+<div class="modal fade" id="UpdateRemarks" tabindex="-1" aria-labelledby="UpdateRemarksLabel" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered">
+      <div class="modal-content">
+          <div class="modal-header">
+              <h3 class="modal-title" id="UpdateRemarksLabel">Update Remarks</h3>
+              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          </div>
+          <div class="modal-body">
+              <p>Remarks</p>
+              <div class="mb-3">
+                <textarea class="form-control" id="message-text" rows="6"></textarea>
+            </div>
+            
+          </div>
+          <div class="modal-footer">
+            <button type="submit" class="btn btn-primary">Update</button>
+              
+              <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+                  
+          </div>
+      </div>
+  </div>
+</div>
+
 <script>
   document.getElementById("statusSelect").addEventListener("change", function() {
       var meetingTime = document.getElementById("meetingTime");
