--- a/customer/templates/customer/onboard_view.html
+++ b/customer/templates/customer/onboard_view.html
@@ -24,6 +24,91 @@
 {% endblock %}
 
 {% block content %}
+<style>
+.stepper-wrapper {
+  margin-top: auto;
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 20px;
+}
+.stepper-item {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  flex: 1;
+
+  @media (max-width: 768px) {
+    font-size: 12px;
+  }
+}
+
+.stepper-item::before {
+  position: absolute;
+  content: "";
+  border-bottom: 2px solid #a0a0a0;
+  width: 100%;
+  top: 20px;
+  left: -50%;
+  z-index: 2;
+}
+
+.stepper-item::after {
+  position: absolute;
+  content: "";
+  border-bottom: 2px solid #362e8d;
+  width: 100%;
+  top: 20px;
+  left: 50%;
+  z-index: 2;
+}
+
+.stepper-item .step-counter {
+  position: relative;
+  z-index: 5;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  background: #e9e9e9;
+  border: 1px solid;
+  margin-bottom: 6px;
+}
+
+.stepper-item.active{
+  font-weight: bold;
+  
+  .step-counter{
+  color: #a35dff;
+  background-color: #ffffff;
+  }
+}
+
+.stepper-item.completed .step-counter {
+  background-color: #ffffff;
+  color: #a35dff;
+}
+
+.stepper-item.completed::after {
+  position: absolute;
+  content: "";
+  border-bottom: 2px solid #a35dff;
+  width: 100%;
+  top: 20px;
+  left: 50%;
+  z-index: 3;
+}
+
+.stepper-item:first-child::before {
+  content: none;
+}
+.stepper-item:last-child::after {
+  content: none;
+}
+</style>
+
 <div class="form-container">
   <div class="col-12 grid-margin stretch-card">
     <div class="card">
@@ -33,6 +118,53 @@
 
         <form class="forms-sample border-top py-5" action="{% url 'customer:onboard' %}" method="POST"
           enctype="multipart/form-data">
+
+          <div class="stepper-wrapper">
+            <div class="stepper-item active">
+              <div class="step-counter"><i class="mdi mdi-file-document"></i></div>
+              <div class="step-name">Client Information</div>
+            </div>
+            <div class="stepper-item ">
+              <div class="step-counter"><i class="mdi mdi-cash" ></i></div>
+              <div class="step-name">Select Plan</div>
+            </div>
+            <div class="stepper-item">
+              <div class="step-counter"><i class="mdi mdi-apple"></i></div>
+              <div class="step-name">Completed</div>
+            </div>
+          </div>
+
+          <div class="stepper-wrapper">
+            <div class="stepper-item completed">
+              <div class="step-counter"><i class="mdi mdi-file-document"></i></div>
+              <div class="step-name">Client Information</div>
+            </div>
+            <div class="stepper-item active">
+              <div class="step-counter"><i class="mdi mdi-cash" ></i></div>
+              <div class="step-name">Select Plan</div>
+            </div>
+            <div class="stepper-item">
+              <div class="step-counter"><i class="mdi mdi-apple"></i></div>
+              <div class="step-name">Completed</div>
+            </div>
+          </div>
+
+          <div class="stepper-wrapper">
+            <div class="stepper-item completed">
+              <div class="step-counter"><i class="mdi mdi-file-document"></i></div>
+              <div class="step-name">Client Information</div>
+            </div>
+            <div class="stepper-item completed">
+              <div class="step-counter"><i class="mdi mdi-cash" ></i></div>
+              <div class="step-name">Select Plan</div>
+            </div>
+            <div class="stepper-item active">
+              <div class="step-counter"><i class="mdi mdi-apple"></i></div>
+              <div class="step-name">Completed</div>
+            </div>
+          </div>
+
+ 
           {% csrf_token %}
           <div class="text-center">Customer Info</div>
           {% include 'customer/profile_form.html' %}
