--- a/assets/css/custom_style.css
+++ b/assets/css/custom_style.css
@@ -66,6 +66,7 @@ td a, .page-link, .breadcrumb-item a {
     text-transform: uppercase;
     letter-spacing: 0.5px;
     font-size: 0.8rem;
+    align-items: center;
 }
 
 table th {
@@ -216,4 +217,12 @@ table .address-col {
     color: #fff;
     background: linear-gradient(to right, #da8cff, #9a55ff) !important;
     border-color: #da8cff;
+}
+.img-fluid {
+    width: 90%;
+    height: auto;
+ }/*For making illustration Big */
+
+ .transparent-text {
+    color: rgba(0, 0, 0, 0.5); /* 60% transparent black color */
 }
