--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -1,36 +1,82 @@
-{% extends "account/base_entrance.html" %}
+{% extends "../account_base.html" %}
+
+{% load static %}
+
+
 {% load i18n %}
 {% load allauth account %}
-{% block head_title %}
-    {% trans "Sign In" %}
-{% endblock head_title %}
+
 {% block content %}
-    {% element h1 %}
-        {% trans "Sign In" %}
-    {% endelement %}
-    <p>
-        {% blocktrans %}If you have not created an account yet, then please
-    <a href="{{ signup_url }}">sign up</a> first.{% endblocktrans %}
-    </p>
-    {% url 'account_login' as login_url %}
-    {% element form form=form method="post" action=login_url tags="entrance,login" %}
-        {% slot body %}
-            {% csrf_token %}
-            {% element fields form=form unlabeled=True %}
-            {% endelement %}
-            {% if redirect_field_value %}
-                <input type="hidden"
-                       name="{{ redirect_field_name }}"
-                       value="{{ redirect_field_value }}" />
-            {% endif %}
-        {% endslot %}
-        {% slot actions %}
-            {% element button type="submit" tags="prominent,login" %}
-                {% trans "Sign In" %}
-            {% endelement %}
-        {% endslot %}
-    {% endelement %}
-    {% if SOCIALACCOUNT_ENABLED %}
-        {% include "socialaccount/snippets/login.html" with page_layout="entrance" %}
-    {% endif %}
+<div class="content-wrapper d-flex align-items-center auth">
+    <div class="row flex-grow">
+    <div class="col-lg-4 mx-auto">
+        <div class="auth-form-light text-left p-5">
+        <div class="brand-logo">
+            <a class="navbar-brand brand-logo" href="index.html"><img src="{% static 'images/logo.png' %}" alt="logo" /></a>
+            </div>
+            <h1 class = "my-3 font-weight-light" >Sign In</h1>
+                
+                {% url 'account_login' as login_url %}
+                {% element form form=form method="post" action=login_url tags="entrance,login" %}
+                {% slot body %}
+                    {% csrf_token %}
+                    
+                    <div class="form-group">
+                        <input type="email" class="form-control form-control-lg" name="login" placeholder="Email address" autocomplete="email" maxlength="320" required="" id="id_login">
+                        </div>
+                    
+                    <div class="form-group">
+                        <input type="password" class="form-control form-control-lg" name="password" placeholder="Password" autocomplete="current-password" required="" aria-describedby="id_password_helptext" id="id_password">
+                        </div>
+
+                    
+                    {% if redirect_field_value %}
+                        <input type="hidden"
+                                name="{{ redirect_field_name }}"
+                                value="{{ redirect_field_value }}" />
+                    {% endif %}
+                {% endslot %}
+    
+                
+                {% slot actions %}
+           
+                    <button type="submit" class="btn btn-primary w-100">Login</button>
+                <div class="my-2 d-flex justify-content-between align-items-center">
+                    <div class="form-check">
+                        <label class="form-check-label text-muted">
+                        <input type="checkbox" class="form-check-input"> Keep me signed in </label>
+                    </div>
+                    <a href="#" class="auth-link text-black">Forgot password?</a>
+                    </div>
+                    <p class="text-center mt-4 font-weight-light">
+                        {% blocktrans %}Don't have an account yet?
+                        <a href="{{ signup_url }}">sign up</a> {% endblocktrans %}
+                    </p>
+                {% endslot %}
+                {% endelement %}
+                {% if SOCIALACCOUNT_ENABLED %}
+                {% include "socialaccount/snippets/login.html" with page_layout="entrance" %}
+                {% endif %}
+        </div>
+    
+        </div>
+        <!-- content-wrapper ends -->
+        </div>
+        <!-- page-body-wrapper ends -->
+    </div>
+    <!-- container-scroller -->
+    <!-- plugins:js -->
+    <script src="../../assets/vendors/js/vendor.bundle.base.js"></script>
+    <!-- endinject -->
+    <!-- Plugin js for this page -->
+    <!-- End plugin js for this page -->
+    <!-- inject:js -->
+    <script src="../../assets/js/off-canvas.js"></script>
+    <script src="../../assets/js/hoverable-collapse.js"></script>
+    <script src="../../assets/js/misc.js"></script>
+    <!-- endinject -->
 {% endblock content %}
+
+
+
+
