--- a/templates/account/password_reset.html
+++ b/templates/account/password_reset.html
@@ -1,30 +1,63 @@
-{% extends "account/base_entrance.html" %}
+{% extends "../account_base.html" %}
+{% load static %}
 {% load i18n allauth account %}
 {% block head_title %}
-    {% trans "Password Reset" %}
+<div class="page-header">
+    <h3 class="page-title">     
+    </h3>
+    <nav aria-label="breadcrumb"> 
+    </nav>
+  </div>
 {% endblock head_title %}
 {% block content %}
-    {% element h1 %}
-        {% trans "Password Reset" %}
-    {% endelement %}
-    {% if user.is_authenticated %}
-        {% include "account/snippets/already_logged_in.html" %}
-    {% endif %}
-    <p>
-        {% trans "Forgotten your password? Enter your email address below, and we'll send you an email allowing you to reset it." %}
-    </p>
-    {% url 'account_reset_password' as reset_url %}
-    {% element form form=form method="post" action=reset_url %}
-        {% slot body %}
-            {% csrf_token %}
-            {% element fields form=form %}
-            {% endelement %}
-        {% endslot %}
-        {% slot actions %}
-            {% element button type="submit" %}
-                {% trans 'Reset My Password' %}
-            {% endelement %}
-        {% endslot %}
-    {% endelement %}
-    <p>{% blocktrans %}Please contact us if you have any trouble resetting your password.{% endblocktrans %}</p>
+<div class="row flex-grow justify-content-center">
+    <!-- White area container -->
+    <div class="col-md-4 bg-white">
+        <!-- Image column -->
+        <div class="d-none d-md-block text-center px-4 py-5">
+            <img src="{% static 'images/Password_forgot.svg' %}" alt="Illustration" class="img-fluid">
+        </div>
+        <!-- Image column end -->
+    </div>
+    
+    <!-- Reset Password column -->
+    <div class="col-md-4 d-flex align-items-center justify-content-center bg-white">
+        <div class="auth-form-light text-left p-4" style="margin-left: 10px;"> 
+            <div class="col-md-11">
+                {% element h1 %}
+                <h1 class="my-3 font-weight-light">
+                    Forgot Password?
+                </h1>
+                {% endelement %}
+                {% if user.is_authenticated %}
+                    {% include "account/snippets/already_logged_in.html" %}
+                {% endif %}
+                <p class="my-4 font-weight-light transparent-text">
+                    {% trans "Did you forget your password? Enter your email address below and we'll send you an email to reset it." %}
+                </p>
+                {% url 'account_reset_password' as reset_url %}
+                {% element form form=form method="post" action=reset_url %}
+                    {% slot body %}
+                        {% csrf_token %}
+                        <div class="form-group">
+                            <input type="email" class="form-control form-control-lg" name="login" placeholder="Email address" autocomplete="email" maxlength="320" required="" id="id_login">
+                        </div>
+                    {% endslot %}
+                    {% slot actions %}
+                    <button type="submit" class="my-1 btn btn-primary w-100">
+                        Reset Password        
+                    </button>
+                    {% endslot %}
+                {% endelement %}
+                <p class="mt-3 font-weight-light transparent-text">
+                    {% blocktrans %}Please contact us if you have any trouble resetting your password.{% endblocktrans %}
+                </p>
+            </div>
+        </div>
+    </div>
+    <!-- Reset Password column end -->
+    
+</div>
+<!-- flex account_reset_password end -->
 {% endblock content %}
+
