Progress Bar Update

--- a/customer/templates/customer/onboard_view.html
+++ b/customer/templates/customer/onboard_view.html
@@ -46,20 +46,10 @@
 .stepper-item::before {
   position: absolute;
   content: "";
-  border-bottom: 2px solid #a0a0a0;
+  border: 3px solid #c8c8c8;
   width: 100%;
-  top: 20px;
+  top: 21px;
   left: -50%;
-  z-index: 2;
-}
-
-.stepper-item::after {
-  position: absolute;
-  content: "";
-  border-bottom: 2px solid #362e8d;
-  width: 100%;
-  top: 20px;
-  left: 50%;
   z-index: 2;
 }
 
@@ -69,37 +59,79 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 40px;
-  height: 40px;
+  width: 50px;
+  height: 50px;
   border-radius: 50%;
-  background: #e9e9e9;
+  background: #ffffff;
   border: 1px solid;
   margin-bottom: 6px;
 }
 
-.stepper-item.active{
-  font-weight: bold;
-  
-  .step-counter{
-  color: #a35dff;
-  background-color: #ffffff;
-  }
+.stepper-item .step-counter i {
+  z-index: 10;
+  font-size: 20px;
+}
+
+.stepper-item .step-counter::before {
+  content: "";
+  position: absolute;
+  width: calc(100% - 4px); 
+  height: calc(100% - 4px); 
+  border-radius: 50%;
+  border: 2px solid #ffffff; 
+}
+
+.stepper-item.active .step-counter::before,
+.stepper-item.completed .step-counter::before {
+  background-color: inherit;
+}
+
+.stepper-item.active .step-counter {
+  color: #ffffff;
+  background-color: #9e58ff;
 }
 
 .stepper-item.completed .step-counter {
-  background-color: #ffffff;
-  color: #a35dff;
+  color: #ffffff;
+  background-color: #3fd08f;
 }
 
+.stepper-item.active {
+  font-weight: bold;
+}
+
+
+.stepper-item.completed .step-counter {
+  color: #ffffff;
+  background-color: #d789ff;
+}
+
+
 .stepper-item.completed::after {
+  
   position: absolute;
   content: "";
-  border-bottom: 2px solid #a35dff;
+  border: 3px solid; 
+  border-image: linear-gradient(to right, #d789ff, #9e58ff); 
+  border-image-slice: 1; 
   width: 100%;
-  top: 20px;
+  top: 21px;
   left: 50%;
   z-index: 3;
 }
+.stepper-item.completed + .stepper-item.completed::before {
+  position: absolute;
+  content: "";
+  border: 3px solid; 
+  border-image: linear-gradient(to right, #d789ff, #d789ff); 
+  border-image-slice: 1; 
+  width: 100%; 
+  top: 21px;
+  left: 50%;
+  transform: translateX(-100%);
+  z-index: 3;
+}
+
 
 .stepper-item:first-child::before {
   content: none;
