Account related pages

--- a/templates/account/account_inactive.html
+++ b/templates/account/account_inactive.html
@@ -1,12 +1,28 @@
-{% extends "allauth/layouts/entrance.html" %}
+{% extends "../account_base.html" %}    
+{% load static %}
 {% load i18n %}
 {% load allauth %}
 {% block head_title %}
     {% trans "Account Inactive" %}
 {% endblock head_title %}
 {% block content %}
-    {% element h1 %}
-        {% trans "Account Inactive" %}
-    {% endelement %}
-    <p>{% trans "This account is inactive." %}</p>
+    <div class="row justify-content-center">
+        <div class="col-md-10 bg-white py-4" style="height: 80vh; display: flex; flex-direction: column; align-items: center; justify-content: center;">
+                <div class="text-center">
+                    <img src="{% static 'images/Inactive.svg' %}" alt="Illustration" style="width: 15%; height: auto;">
+                </div>
+                <div class="text-center">
+                        {% element h2 %}
+                            <h2 class="my-3 card-title"> {% trans "Account Inactive" %}</h2>
+                        {% endelement %}
+                        {% if user.is_authenticated %}
+                            {% include "account/snippets/already_logged_in.html" %}
+                        {% endif %}
+                        <p class="my-3 font-weight-light px-5">
+                            {% trans "This account is inactive." %}
+                        </p>
+                </div>
+            <p class="text-muted font-weight-light text-center">Copyright © Tabernacle 2024</p>
+        </div>
+    </div>
 {% endblock content %}
