--- a/templates/account/email_confirm.html
+++ b/templates/account/email_confirm.html
@@ -1,4 +1,5 @@
-{% extends "account/base_entrance.html" %}
+{% extends "../account_base.html" %}    
+{% load static %}
 {% load i18n %}
 {% load account %}
 {% load allauth %}
