--- a/templates/account/verification_sent.html
+++ b/templates/account/verification_sent.html
@@ -1,14 +1,30 @@
-{% extends "account/base_entrance.html" %}
+{% extends "../account_base.html" %}    
+{% load static %}
 {% load i18n %}
 {% load allauth %}
 {% block head_title %}
     {% trans "Verify Your Email Address" %}
 {% endblock head_title %}
 {% block content %}
-    {% element h1 %}
-        {% trans "Verify Your Email Address" %}
-    {% endelement %}
-    <p>
-        {% blocktrans %}We have sent an email to you for verification. Follow the link provided to finalize the signup process. If you do not see the verification email in your main inbox, check your spam folder. Please contact us if you do not receive the verification email within a few minutes.{% endblocktrans %}
-    </p>
+
+    <div class="row justify-content-center">
+        <div class="col-md-10 bg-white py-4" style="height: 80vh; display: flex; flex-direction: column; align-items: center; justify-content: center;">
+                <div class="text-center">
+                    <img src="{% static 'images/Mail_sent.svg' %}" alt="Illustration" style="width: 14%; height: auto;">
+                </div>
+                <div class="text-center">
+                        {% element h2 %}
+                            <h2 class="my-3 card-title">{% trans "Verify Your Email Address" %}</h2>
+                        {% endelement %}
+                        {% if user.is_authenticated %}
+                            {% include "account/snippets/already_logged_in.html" %}
+                        {% endif %}
+                        <p class="my-3 font-weight-light px-5">
+                            {% blocktrans %}We have sent an email to you for verification. Follow the link provided to finalize the signup process. If you do not see the verification email in your main inbox, check your spam folder. Please contact us if you do not receive the verification email within a few minutes.{% endblocktrans %}
+                        </p>
+                </div>
+            <p class="text-muted font-weight-light text-center">Copyright © Tabernacle 2024</p>
+        </div>
+    </div>
+    
 {% endblock content %}
