--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -7,14 +7,13 @@
 {% load allauth account %}
 
 {% block content %}
-<div class="content-wrapper d-flex align-items-center auth">
-    <div class="row flex-grow">
+
     <div class="col-lg-4 mx-auto">
         <div class="auth-form-light text-left p-5">
         <div class="brand-logo">
             <a class="navbar-brand brand-logo" href="index.html"><img src="{% static 'images/logo.png' %}" alt="logo" /></a>
             </div>
-            <h1 class = "my-3 font-weight-light" >Sign In</h1>
+            <h2 class = "my-3 font-weight-light" >Sign In</h2>
                 
                 {% url 'account_login' as login_url %}
                 {% element form form=form method="post" action=login_url tags="entrance,login" %}
@@ -22,11 +21,13 @@
                     {% csrf_token %}
                     
                     <div class="form-group">
-                        <input type="email" class="form-control form-control-lg" name="login" placeholder="Email address" autocomplete="email" maxlength="320" required="" id="id_login">
+                        <P class = "text-muted font-weight-light mb-0">Email</p>
+                        <input type="email" class="form-control form-control-lg" name="login"  autocomplete="email" maxlength="320" required="" id="id_login">
                         </div>
                     
                     <div class="form-group">
-                        <input type="password" class="form-control form-control-lg" name="password" placeholder="Password" autocomplete="current-password" required="" aria-describedby="id_password_helptext" id="id_password">
+                        <P class = "text-muted font-weight-light mb-0">Password</p>
+                        <input type="password" class="form-control form-control-lg" name="password" autocomplete="current-password" required="" aria-describedby="id_password_helptext" id="id_password">
                         </div>
 
                     
@@ -46,12 +47,14 @@
                         <label class="form-check-label text-muted">
                         <input type="checkbox" class="form-check-input"> Keep me signed in </label>
                     </div>
-                    <a href="#" class="auth-link text-black">Forgot password?</a>
+                    <a href="{% url 'account_reset_password'%}" class="auth-link">Forgot password?</a>
                     </div>
                     <p class="text-center mt-4 font-weight-light">
                         {% blocktrans %}Don't have an account yet?
-                        <a href="{{ signup_url }}">sign up</a> {% endblocktrans %}
+                        <a href="{{ signup_url }}">sign up</a> {% endblocktrans %}   
                     </p>
+                    <p class="text-muted font-weight-light text-center">Copyright © Tabernacle 2024</p>
+                    
                 {% endslot %}
                 {% endelement %}
                 {% if SOCIALACCOUNT_ENABLED %}
@@ -61,9 +64,7 @@
     
         </div>
         <!-- content-wrapper ends -->
-        </div>
-        <!-- page-body-wrapper ends -->
-    </div>
+        
     <!-- container-scroller -->
     <!-- plugins:js -->
     <script src="../../assets/vendors/js/vendor.bundle.base.js"></script>
@@ -76,7 +77,5 @@
     <script src="../../assets/js/misc.js"></script>
     <!-- endinject -->
 {% endblock content %}
-
-
 
 
