--- a/templates/account/password_change.html
+++ b/templates/account/password_change.html
@@ -1,24 +1,85 @@
-{% extends "account/base_manage_password.html" %}
+{% extends "base.html" %}
+
+{% load static %}
+
+{% block head_title %}{{ title }}{% endblock %}
+
+{% block navbar %}
+{% include '_partials/_navbar.html' %}
+{% endblock %}
+
+{% block sidebar %}
+{% include '_partials/_sidebar.html' %}
+{% endblock %}
+
+{% block page_title %}
+<div class="page-header">
+    <h3 class="page-title">
+      Change Password  
+    </h3>
+    <nav aria-label="breadcrumb">
+{% endblock %}
+
+
 {% load allauth i18n %}
-{% block head_title %}
     {% trans "Change Password" %}
-{% endblock head_title %}
+
+    {% block breadcrumbs %}
+    <ol class="breadcrumb">
+      <li class="breadcrumb-item"><a href="{% url 'account_login' %}">Home</a></li>
+      <li class="breadcrumb-item active" aria-current="page">Change Password</li>
+    </ol>
+    {% endblock %}
 {% block content %}
-    {% element h1 %}
-        {% trans "Change Password" %}
-    {% endelement %}
+<div class="form-container ">
+    <div class="col-12 grid-margin stretch-card">
+      <div class="card py-2">
+            {% element h2 %}
+                <h2 class="my-3 card-title px-5">{% trans "Change Password" %}</h2>
+        {% endelement %}
     {% url 'account_change_password' as action_url %}
     {% element form form=form method="post" action=action_url %}
         {% slot body %}
             {% csrf_token %}
-            {% element fields form=form %}
-            {% endelement %}
+            <div class="auth-form-light text-left font-weight-light px-5">   
+                  <div class="form-group">
+                    <P class = "text-muted font-weight-light mb-0">Current Password:</p>
+                    <input type="password" class="form-control form-control-lg" name="oldpassword" autocomplete="current-password" required="" aria-describedby="id_password_helptext" id="id_oldpassword">
+                    </div>  
+                    <div class="form-group">
+                        <P class = "text-muted font-weight-light mb-0">New Password:</p>
+                        <input type="password" class="form-control form-control-lg" name="password1" autocomplete="current-password" required="" aria-describedby="id_password_helptext" id="id_password1">
+                    </div>
+                    <span class="helptext" id="id_password1_helptext"></span></p>
+                    <ul class="transparent-text font-weight-light">
+                        <li>
+                            Your password can’t be too similar to your other personal information.
+                        </li>
+                        <li>
+                            Your password must contain at least 8 characters.
+                        </li>
+                        <li>
+                            Your password can’t be a commonly used password.
+                        </li>
+                        <li>
+                            Your password can’t be entirely numeric.
+                        </li>
+                    </ul>
+                    <div class="form-group">
+                        <P class = "text-muted font-weight-light mb-0">New Password (again):</p>
+                        <input type="password" class="form-control form-control-lg" name="password2" autocomplete="current-password" required="" aria-describedby="id_password_helptext" id="id_password2">
+                    </div>  
         {% endslot %}
         {% slot actions %}
-            {% element button type="submit" %}
-                {% trans "Change Password" %}
-            {% endelement %}
-            <a href="{% url 'account_reset_password' %}">{% trans "Forgot Password?" %}</a>
+        <div class="my-2 d-flex justify-content-between align-items-center">
+            <button type="submit" class="my-1 btn btn-primary">
+                Change Password                    
+            </button>
+            <a href="{% url 'account_reset_password'%}" class="auth-link">Forgot password?</a>
+        </div>  
         {% endslot %}
     {% endelement %}
+        </div>
+    </div>
+</div>
 {% endblock content %}
