--- a/templates/account/password_reset.html
+++ b/templates/account/password_reset.html
@@ -11,23 +11,22 @@
 {% endblock head_title %}
 {% block content %}
 <div class="row flex-grow justify-content-center">
-    <!-- White area container -->
-    <div class="col-md-4 bg-white">
+    <div class="col-md-5 bg-white py-3" style="height: 80vh; display: flex; flex-direction: column; align-items: center; justify-content: center;">
         <!-- Image column -->
-        <div class="d-none d-md-block text-center px-4 py-5">
+        <div class="text-center py-5">
             <img src="{% static 'images/Password_forgot.svg' %}" alt="Illustration" class="img-fluid">
         </div>
         <!-- Image column end -->
     </div>
     
     <!-- Reset Password column -->
-    <div class="col-md-4 d-flex align-items-center justify-content-center bg-white">
-        <div class="auth-form-light text-left p-4" style="margin-left: 10px;"> 
-            <div class="col-md-11">
-                {% element h1 %}
-                <h1 class="my-3 font-weight-light">
+    <div class="col-md-5 d-flex align-items-center justify-content-center bg-white px-5">
+        <div class="auth-form-light text-left"> 
+            <div class="col-md-11 px-3">
+                {% element h2 %}
+                <h2 class="my-3 card-title">
                     Forgot Password?
-                </h1>
+                </h2>
                 {% endelement %}
                 {% if user.is_authenticated %}
                     {% include "account/snippets/already_logged_in.html" %}
@@ -40,7 +39,8 @@
                     {% slot body %}
                         {% csrf_token %}
                         <div class="form-group">
-                            <input type="email" class="form-control form-control-lg" name="login" placeholder="Email address" autocomplete="email" maxlength="320" required="" id="id_login">
+                            <p class="text-muted font-weight-light mb-0">Email</p>
+                            <input type="email" class="form-control form-control-lg" name="login" autocomplete="email" maxlength="320" required="" id="id_login">
                         </div>
                     {% endslot %}
                     {% slot actions %}
@@ -52,6 +52,7 @@
                 <p class="mt-3 font-weight-light transparent-text">
                     {% blocktrans %}Please contact us if you have any trouble resetting your password.{% endblocktrans %}
                 </p>
+                <p class="text-muted font-weight-light">Copyright © Tabernacle 2024</p>
             </div>
         </div>
     </div>
@@ -59,5 +60,7 @@
     
 </div>
 <!-- flex account_reset_password end -->
+
+
 {% endblock content %}
 
