--- a/customer/templates/customer/select_plan.html
+++ b/customer/templates/customer/select_plan.html
@@ -16,6 +16,10 @@
 {{ title }}
 {% endblock %}
 
+{% block app_stylesheets %}
+<link rel="stylesheet" href="{% static 'customer/css/style.css' %}">
+{% endblock %}
+
 {% block breadcrumbs %}
 <ol class="breadcrumb">
   <li class="breadcrumb-item"><a href="{% url 'contact:list' %}">Customers Overview</a></li>
@@ -30,6 +34,22 @@
       <div class="card-body">
         <h4 class="card-title text-center">Let's get started with the onboarding process</h4>
         <p class="card-description text-center">Follow the 3-step process to onboard the client</p>
+
+        <div class="stepper-wrapper">
+          <div class="stepper-item completed">
+            <div class="step-counter"><i class="mdi mdi-file-document"></i></div>
+            <div class="step-name">Customer Info</div>
+          </div>
+          <div class="stepper-item active">
+            <div class="step-counter"><i class="mdi mdi-cash" ></i></div>
+            <div class="step-name">Select Plan</div>
+          </div>
+          <div class="stepper-item">
+            <div class="step-counter"><i class="mdi mdi-account-multiple-plus"></i></div>
+            <div class="step-name">Completed</div>
+          </div>
+        </div>
+
         <form class="forms-sample border-top py-5" action="{% url 'customer:select-plan' customer_id %}" method="POST"
           enctype="multipart/form-data" data-url="{% url 'plan:get-plan-amount' %}">
           {% csrf_token %}
