--- a/templates/_partials/_pagination.html
+++ b/templates/_partials/_pagination.html
@@ -31,14 +31,15 @@
                 {% if i < page_obj.number and i >= page_obj.number|add:"-2" and i != page_obj.number and i != 1 %}
                     <li class="page-item">
                         <a class="page-link" href="{% relative_url i 'page' request.GET.urlencode %}">{{ i }}
-                            <span class="sr-only">(current)</span>
+                            
                         </a>
                     </li>
                 {% elif i > page_obj.number and i <= page_obj.number|add:"2" and i != page_obj.number and i != page_obj.paginator.num_pages %}
                 <li class="page-item">
                     <a class="page-link"
-                        href="{% relative_url i 'page' request.GET.urlencode %}">{{ i }} <span
-                            class="sr-only">(current)</span></a>
+                        href="{% relative_url i 'page' request.GET.urlencode %}">{{ i }} 
+                        
+                    </a>
                 </li>
                 {% elif page_obj.number == i %}
                 <li class="page-item active">
